# msc-thesis-code

./: pyproject.toml  readme.md  use.txt
core/: evaluate_offline.py  generate_data.py  model.py  topology.py  train_centralized.py  use.txt
data/federated_data/federal-2026-02-05-22:31:03/: tunnels.json
data/training_data/: evaluation_results.json  metadata.json
federated-linkutil/: final_backbone.pt  pyproject.toml
federated-linkutil/heads/: ATLA_head.pt  CHIN_head.pt  DENV_head.pt  HOUS_head.pt  IPLS_head.pt  KSCY_head.pt  LOSA_head.pt  NYCM_head.pt  SEAT_head.pt  SNVA_head.pt  WASH_head.pt
federated-linkutil/tefl/: client_app.py  server_app.py  task.py
federated-local/: final_backbone.pt  pyproject.toml
federated-local/heads/: ATLA_head.pt  CHIN_head.pt  DENV_head.pt  HOUS_head.pt  IPLS_head.pt  KSCY_head.pt  LOSA_head.pt  NYCM_head.pt  SEAT_head.pt  SNVA_head.pt  WASH_head.pt
federated-local/tefl/: client_app.py  server_app.py  task.py
federated-neighbor/: final_backbone.pt  pyproject.toml
federated-neighbor/heads/: ATLA_head.pt  CHIN_head.pt  DENV_head.pt  HOUS_head.pt  IPLS_head.pt  KSCY_head.pt  LOSA_head.pt  NYCM_head.pt  SEAT_head.pt  SNVA_head.pt  WASH_head.pt
federated-neighbor/tefl/: client_app.py  server_app.py  task.py
federated-oracle/: final_backbone.pt  pyproject.toml
federated-oracle/heads/: ATLA_head.pt  CHIN_head.pt  DENV_head.pt  HOUS_head.pt  IPLS_head.pt  KSCY_head.pt  LOSA_head.pt  NYCM_head.pt  SEAT_head.pt  SNVA_head.pt  WASH_head.pt
federated-oracle/tefl/: client_app.py  server_app.py  task.py
(+154 files in other folders)
